force-app/main/default/objects/Payment__c/fields/Amount__c.field-meta.xml
<CustomField>
<fullName>Amount__c</fullName>
<label>Amount</label>
<type>Currency</type>
<required>true</required>
<scale>2</scale>
<precision>18</precision>
</CustomField>