force-app/main/default/objects/Payment__c/fields/EMI_Months__c.field-meta.xml
<CustomField>
    <fullName>EMI_Months__c</fullName>
    <label>EMI</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>