force-app/main/default/objects/Payment__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <label>Failure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>