force-app/main/default/objects/Payment__c/fields/Gateway__c.field-meta.xml
<CustomField>
    <fullName>Gateway__c</fullName>
    <label>Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Razorpay</fullName>
            </value>
            <value>
                <fullName>Cashfree</fullName>
            </value>
            <value>
                <fullName>PayU</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>