force-app/main/default/objects/Payment__c/fields/Gateway_Txn_Id__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Txn_Id__c</fullName>
    <label>Gateway Txn ID</label>
    <length>64</length>
    <type>Text</type>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>