force-app/main/default/objects/Payment__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <label>Invoice</label>
    <length>40</length>
    <type>Text</type>
</CustomField>