force-app/main/default/objects/Payment__c/fields/Link_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Link_Expires_At__c</fullName>
    <label>Expiry</label>
    <type>DateTime</type>
</CustomField>