force-app/main/default/objects/Payment__c/fields/Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Link_Id__c</fullName>
    <externalId>true</externalId>
    <label>Link ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>