force-app/main/default/objects/Payment__c/fields/Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>