force-app/main/default/objects/Payment__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Netbanking</fullName>
            </value>
            <value>
                <fullName>EMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>