force-app/main/default/objects/Payment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
<fullName>Opportunity__c</fullName>
<label>Opportunity</label>
<type>Lookup</type>
<referenceTo>Opportunity</referenceTo>
<relationshipLabel>Opportunity Records</relationshipLabel>
<relationshipName>Opportunity</relationshipName>
</CustomField>