force-app/main/default/objects/Payment__c/fields/Paid_At__c.field-meta.xml
<CustomField>
    <fullName>Paid_At__c</fullName>
    <label>Paid</label>
    <type>DateTime</type>
</CustomField>