force-app/main/default/objects/Payment__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payer Records</relationshipLabel>
    <relationshipName>PaymentPayer</relationshipName>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>