force-app/main/default/objects/Payment__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>CGM kit</fullName>
            </value>
            <value>
                <fullName>Sensor refill</fullName>
            </value>
            <value>
                <fullName>Lab panel</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
    <required>true</required>
</CustomField>